--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -5,4 +5,8 @@
   <p>Description: <%= item.description %></p>
 
   <%= link_to "edit", edit_todo_list_path(item) %>
+  <%= link_to "delete", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" } %>
 <% end %>
+
+<br />
+<%= link_to 'New todo list', new_todo_list_path %>
