--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -6,6 +6,7 @@
 
   <%= link_to "edit", edit_todo_list_path(item) %>
   <%= link_to "delete", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" } %>
+  <%= link_to "detail", todo_list_path(item) %>
 <% end %>
 
 <br />
