--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,11 +1,20 @@
 <h1>New item</h1>
 
 <% @todo_items.each do |item| %>
-  <p><%= item.content %></p>
-  <%= link_to  "delete", todo_list_todo_item_path(@todo_list, item), method: :delete, data: { confirm: "Are you sure?!" } %>
+  <% if item.completed? %>
+    <p style="opacity: 0.3;"><strike><%= item.content %></strike></p>
+    <%= link_to  "delete", todo_list_todo_item_path(@todo_list, item), method: :delete, data: { confirm: "Are you sure?!" } %>
+    <%= link_to  "complete", todo_list_todo_item_path(@todo_list, item), method: :patch %>
+  <% else %>
+    <p><%= item.content %></p>
+    <%= link_to  "delete", todo_list_todo_item_path(@todo_list, item), method: :delete, data: { confirm: "Are you sure?!" } %>
+    <%= link_to  "complete", todo_list_todo_item_path(@todo_list, item), method: :patch %>
+  <% end %>
 <% end %>
 
 <%= form_for([@todo_list, @todo_list.todo_items.build]) do |f| %>
   <%= f.text_field :content, placeholder: "New todo item" %>
   <%= f.submit %>
 <% end %>
+
+<%= link_to "back to list", todo_lists_path %>
