--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,13 +1,20 @@
 <h1>Todo Lists</h1>
 
+      <div class="list-group">
 <% @todo_lists.each do |item| %>
-  <p>Title: <%= item.title %></p>
-  <p>Description: <%= item.description %></p>
 
-  <%= link_to "edit", edit_todo_list_path(item) %>
-  <%= link_to "delete", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" } %>
-  <%= link_to "detail", todo_list_path(item) %>
+
+        <a href="#" class="list-group-item">
+          <span class="glyphicon glyphicon-trash"></span>
+          <h4 class="list-group-item-heading"><%= item.title %></h4>
+          <p class="list-group-item-text"><%= item.description %></p>
+        </a>
+      <%= link_to "edit", edit_todo_list_path(item) %>
+      <span><%= link_to "", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" }, class: "glyphicon glyphicon-trash" %></span>
+      <%= link_to "detail", todo_list_path(item) %>
+
 <% end %>
+      </div>
 
 <br />
 <%= link_to 'New todo list', new_todo_list_path %>
