--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,20 +1,25 @@
-<h1>Todo Lists</h1>
+<h1>Todo List: </h1>
 
-      <div class="list-group">
-<% @todo_lists.each do |item| %>
+  <div class="list-group">
+    <% @todo_lists.each do |item| %>
 
+      <span class="list-group-item">
+        <h4 class="list-group-item-heading"><%= item.title %></h4>
+        <div class="row">
+          <div class="col-md-9">
+            <p class="list-group-item-text" style="opacity: 0.6;"><%= item.description %></p>
+          </div>
+          <div class="col-md-3 text-center">
+            <%= link_to "", edit_todo_list_path(item), class: "glyphicon glyphicon-edit btn btn-default btn-xs" %>
+            <%= link_to "", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" }, class: "glyphicon glyphicon-trash btn btn-default btn-xs" %>
+            <%= link_to "", todo_list_path(item), class: "glyphicon glyphicon-arrow-right btn btn-default btn-xs" %>
+          </div>
+        </div>
+      </span>
 
-        <a href="#" class="list-group-item">
-          <span class="glyphicon glyphicon-trash"></span>
-          <h4 class="list-group-item-heading"><%= item.title %></h4>
-          <p class="list-group-item-text"><%= item.description %></p>
-        </a>
-      <%= link_to "edit", edit_todo_list_path(item) %>
-      <span><%= link_to "", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" }, class: "glyphicon glyphicon-trash" %></span>
-      <%= link_to "detail", todo_list_path(item) %>
+    <% end %>
+  </div>
 
-<% end %>
-      </div>
-
-<br />
-<%= link_to 'New todo list', new_todo_list_path %>
+  <div class=" text-center">
+    <%= link_to 'New todo list', new_todo_list_path, class: "btn btn-default" %>
+  </div>
