--- a/app/views/todo_lists/new.html.erb
+++ b/app/views/todo_lists/new.html.erb
@@ -1,13 +1,3 @@
 <h1>Create new todo list</h1>
-
-<%= form_for(@todo_list) do |f| %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-
-  <%= f.label :description %>
-  <%= f.text_field :description %>
-
-  <%= f.submit %>
-<% end %>
-
+<%= render 'shared/form_for_new_todo_list' %>
 <%= link_to 'back', todo_lists_path %>
