--- a/app/views/shared/_form_for_new_todo_list.html.erb
+++ b/app/views/shared/_form_for_new_todo_list.html.erb
@@ -1,15 +1,25 @@
 <div class="modal-header">
-  <h4 class="modal-title" id="myModalLabel">New todo list</h4>
+  <% if @todo_list.title.blank? %>
+    <h4 class="modal-title" id="myModalLabel">New todo list</h4>
+  <% else %>
+    <h4 class="modal-title" id="myModalLabel">Edit todo list</h4>
+  <% end %>
 </div>
-<%= form_for(@todo_list) do |f| %>
-<div class="modal-body">
-  <%= f.text_field :title, class: "form-control", placeholder: "Title" %>
-  <br />
 
-  <%= f.text_area :description, class: "form-control", placeholder: "Description ... " %>
+<div class="modal-body">
+  <%= form_for(@todo_list) do |f| %>
+    <%= f.text_field :title, class: "form-control", placeholder: "Title" %>
+    <br />
+
+    <%= f.text_area :description, class: "form-control", placeholder: "Description ... " %>
 </div>
+
 <div class="modal-footer">
   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-  <%= f.submit "Create", class: "btn btn-primary"%>
+  <% if @todo_list.title.blank? %>
+    <%= f.submit "Create", class: "btn btn-primary"%>
+  <% else %>
+    <%= f.submit "update", class: "btn btn-primary"%>
+  <% end %>
 </div>
 <% end %>
