--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -10,7 +10,7 @@
             <p class="list-group-item-text" style="opacity: 0.6;"><%= item.description %></p>
           </div>
           <div class="col-md-3 text-center">
-            <%= link_to "", edit_todo_list_path(item), class: "glyphicon glyphicon-edit btn btn-default btn-xs" %>
+            <%= link_to "", edit_todo_list_path(item), data: {toggle: "modal", target: "#modal", remote: true }, class: "glyphicon glyphicon-edit btn btn-default btn-xs" %>
             <%= link_to "", todo_list_path(item), method: :delete, data: { confirm: "Are you sure?!" }, class: "glyphicon glyphicon-trash btn btn-default btn-xs" %>
             <%= link_to "", todo_list_path(item), class: "glyphicon glyphicon-arrow-right btn btn-default btn-xs" %>
           </div>
@@ -21,15 +21,14 @@
   </div>
 
   <div class=" text-center">
-    <%= link_to 'New todo list', new_todo_list_path, data: { toggle: "modal", target: "#modal" }, remote: true, class: "btn btn-default" %>
-    <%#= link_to 'New todo list', "#", data: {toggle: "modal", target: "#modal"}, class: "btn btn-default" %>
+    <%= link_to 'New todo list', new_todo_list_path, data: { toggle: "modal", target: "#modal", remote: true }, class: "btn btn-default" %>
   </div>
 
   <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="new_todo_list_form">
-          </div>
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="new_todo_list_form">
         </div>
       </div>
     </div>
+  </div>
