--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -1,5 +1,7 @@
 <h1>New item</h1>
 <%= form_for(@todo_list, @todo_list.todo_items.build) do |f| %>
+
+  <%= render 'shared/error_message' %>
   <%= f.text_field :content, placeholder: "New todo item" %>
   <%= f.submit %>
 <% end %>
