--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New item</h1>
-<%= form_for(@todo_list, @todo_list.todo_items.build) do |f| %>
+<%= form_for @todo_item do |f| %>
 
-  <%= render 'shared/error_message' %>
-  <%= f.text_field :content, placeholder: "New todo item" %>
+  <%= render 'shared/error_messages', object: f.object %>
+  <%= f.text_field :content, placeholder: "New todo djlgj item" %>
   <%= f.submit %>
 <% end %>
