--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-  <div class="flass_messages">
+  <div class="flash_messages_of_success">
     <%= value %>
   </div>
 <% end %>
