--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
 <div class="containner">
     <div class="row">
       <div class="col-md-6 col-md-offset-3">
+        <%= render 'layouts/header' %>
         <%= yield %>
         <hr>
         <%= render 'layouts/footer' %>
