--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,5 +1,6 @@
+
 <% flash.each do |key, value| %>
-  <div class="flass_messages">
+  <div class="flash_messages_of_<%= key %>">
     <%= value %>
   </div>
 <% end %>
@@ -46,4 +47,8 @@
   </ul>
 </div>
 
+<div class="row">
+<div class="col-md-offset-3">
 <%= render 'shared/form_for_new_todo_item' %>
+</div>
+</div>
